create detection model

--- a/report/src/tabel.tex
+++ b/report/src/tabel.tex
@@ -18,13 +18,13 @@
     \hline
     29.06.2019 & Получение задания & МАИ & 9:00 & 18:00 & \\
     \hline
-    01.07.2019 &  & МАИ & 9:00 & 18:00 & \\
+    01.07.2019 & Изучение темы, постановки вопроса & МАИ & 9:00 & 18:00 & \\
     \hline
-    02.07.2019 &  & МАИ & 9:00 & 18:00 & \\
+    02.07.2019 & Поиск литературы & МАИ & 9:00 & 18:00 & \\
     \hline
-    03.07.2019 &  & МАИ & 9:00 & 18:00 & \\
+    03.07.2019 & Изучение литературы & МАИ & 9:00 & 18:00 & \\
     \hline
-    04.07.2019 &  & МАИ & 9:00 & 18:00 & \\
+    04.07.2019 & Отрабатывание изученного материала, создание модели & МАИ & 9:00 & 18:00 & \\
     \hline
     05.07.2019 &  & МАИ & 9:00 & 18:00 & \\
     \hline
