inited arduino dir

--- a/report/src/tabel.tex
+++ b/report/src/tabel.tex
@@ -26,7 +26,7 @@
     \hline
     04.07.2019 & Отрабатывание изученного материала, создание модели & МАИ & 9:00 & 18:00 & \\
     \hline
-    05.07.2019 &  & МАИ & 9:00 & 18:00 & \\
+    05.07.2019 & Изучение многопоточности в arduino & МАИ & 9:00 & 18:00 & \\
     \hline
     06.07.2019 &  & МАИ & 9:00 & 18:00 & \\
     \hline
