--- a/report/src/tabel.tex
+++ b/report/src/tabel.tex
@@ -28,9 +28,9 @@
     \hline
     05.07.2019 & Изучение многопоточности в arduino & МАИ & 9:00 & 18:00 & \\
     \hline
-    06.07.2019 &  & МАИ & 9:00 & 18:00 & \\
+    06.07.2019 & Покупка частей ардуино, написание основных функций & МАИ & 9:00 & 18:00 & \\
     \hline
-    07.07.2019 &  & МАИ & 9:00 & 18:00 & \\
+    07.07.2019 & Написание кода ардуино & МАИ & 9:00 & 18:00 & \\
     \hline
     09.07.2019 &  & МАИ & 9:00 & 18:00 & \\
     \hline
