--- a/report/report.tex
+++ b/report/report.tex
@@ -41,6 +41,9 @@
 \newcolumntype{C}[1]{>{\centering\arraybackslash}p{#1}}
 \setlength{\extrarowheight}{10pt}
 
+\usepackage{graphicx}
+\usepackage{hyperref}
+
 \begin{document}
 
 \begin{titlepage}
@@ -75,8 +78,8 @@
 \vspace{72pt}
 
 \begin{flushleft}
-Наименование практики: {\itshape вычислительная/исследовательская}\\
-Студент: В.\,И. Пупкин \\
+Наименование практики: {\itshape вычислительная}\\
+Студент: А.\,И. Шичко \\
 Факультет №8, курс 2, группа 7 \\
 \end{flushleft}
 
@@ -137,7 +140,7 @@
 С инструкцией о заполнении журнала ознакомились:
 \end{center}
 
-«\hspace{0.5cm}» \tline{(дата)}{1.5in} \the\year\,г.\hfillСтудент Пупкин В.\,И. \tline{(подпись)}{1in}
+«\hspace{0.5cm}» \tline{(дата)}{1.5in} \the\year\,г.\hfillСтудент Шичко А.\,И. \tline{(подпись)}{1in}
 \pagebreak
 
 \input{src/problem}
@@ -146,9 +149,8 @@
 \begin{center}
 \bfseries{\large Отзывы цеховых руководителей практики}
 \end{center}
-Студент Пупкин А.\,В. разработал ...
-
-Презентация защищена на комиссии кафедры 806. Работа выполнена в полном объёме. Рекомендую на оценку \enquote{\hspace{2cm}}. Все материалы сданы на кафедру.
+Студент Шичко А.\,И. разработал программу-плеер на python, которая позволяет включать музыку, осуществлять простые манипуляции с её воспроизведением, анализировать её на низкочастотные удары и выводить результаты на led ленту.
+\par Презентация защищена на комиссии кафедры 806. Работа выполнена в полном объёме. Рекомендую на оценку \enquote{\hspace{2cm}}. Все материалы сданы на кафедру.
 \pagebreak
 
 
@@ -166,7 +168,7 @@
 \noindent
 студентами:
 \noindent
-Пупкин Василий Иванович
+Шичко Алексей Игоревич
 
 \begin{longtable}{p{7cm}|p{11cm}}
     \hline
