--- a/report/src/problem.tex
+++ b/report/src/problem.tex
@@ -2,7 +2,8 @@
 \bfseries{\large ЗАДАНИЕ}
 \end{center}
 
-кафедры 806 по вычислительной/исследовательской практике:
+кафедры 806 по вычислительной практике:
+\par Разработать программу-плеер на python, которая позволяет включать музыку, осуществлять простые манипуляции с её воспроизведением, анализировать её на низкочастотные удары и выводить результаты на led ленту.
 
 \vspace*{\fill}
 Руководитель практики от института:
