--- a/report/src/rationalization.tex
+++ b/report/src/rationalization.tex
@@ -2,4 +2,11 @@
 \bfseries{\large МАТЕРИАЛЫ ПО РАЦИОНАЛИЗАТОРСКИМ ПРЕДЛОЖЕНИЯМ}
 \end{center}
 
+\begin{enumerate}
+    \item Использовать ML для нахождения жанра музыки, в зависимости от этого менять цвет;
+    \item Определять насколько сильно отличается бит и в зависимости от этого, варьировать насколько сильно вспыхнет лента;
+    \item Подбирать параметры peak picking'а в зависимости от медианы rms песни;
+    \item Позволить пользователю самому выбрать цвет для текущей песни и в дальнейшем использовать её;
+    \item Переместить все настройки в отдельный файл.
+\end{enumerate}
 \pagebreak
