--- a/report/src/tabel.tex
+++ b/report/src/tabel.tex
@@ -32,11 +32,11 @@
     \hline
     07.07.2019 & Написание кода ардуино & МАИ & 9:00 & 18:00 & \\
     \hline
-    09.07.2019 &  & МАИ & 9:00 & 18:00 & \\
+    09.07.2019 & Написание кода python & МАИ & 9:00 & 18:00 & \\
     \hline
-    10.07.2019 &  & МАИ & 9:00 & 18:00 & \\
+    10.07.2019 & Написание кода python, сбор в целое & МАИ & 9:00 & 18:00 & \\
     \hline
-    11.07.2019 &  & МАИ & 9:00 & 18:00 & \\
+    11.07.2019 & Сбор в целое, подбор параметров, разрешение багов & МАИ & 9:00 & 18:00 & \\
     \hline
     12.07.2018 & Сдача журнала & МАИ & 9:00 & 18:00 &  \\
     \hline
